[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/MakeFolders/PanelScript.gd" type="Script" id=1]

[node name="MFPanel" type="PanelContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 346.0
margin/bottom = 599.0
script/script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 7.0
margin/top = 7.0
margin/right = 339.0
margin/bottom = 592.0
alignment = 0

[node name="HSeparator0" type="HSeparator" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 332.0
margin/bottom = 16.0

[node name="folderName" type="LineEdit" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 20.0
margin/right = 332.0
margin/bottom = 44.0
text = "Assets"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 48.0
margin/right = 332.0
margin/bottom = 64.0

[node name="OptionsVBox" type="VBoxContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 68.0
margin/right = 332.0
margin/bottom = 423.0
alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/OptionsVBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 332.0
margin/bottom = 355.0
scroll/horizontal = false
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/OptionsVBox/ScrollContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 436.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 436.0
alignment = 0

[node name="InputVBox" type="VBoxContainer" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 436.0
alignment = 0

[node name="Line1" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 40.0
text = "Scenes"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line2" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 240.0
margin/bottom = 84.0
text = "Instances"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line3" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 88.0
margin/right = 240.0
margin/bottom = 128.0
text = "Textures"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line10" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 132.0
margin/right = 240.0
margin/bottom = 172.0
text = "Materials"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line4" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 176.0
margin/right = 240.0
margin/bottom = 216.0
text = "Sprites"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line5" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 220.0
margin/right = 240.0
margin/bottom = 260.0
text = "Scripts"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line6" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 264.0
margin/right = 240.0
margin/bottom = 304.0
text = "Sounds"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line7" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 308.0
margin/right = 240.0
margin/bottom = 348.0
text = "Music"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line8" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 352.0
margin/right = 240.0
margin/bottom = 392.0
text = "Extra1"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Line9" type="LineEdit" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/InputVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 396.0
margin/right = 240.0
margin/bottom = 436.0
text = "Extra2"
placeholder/alpha = 0.6
max_length = 28
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="CheckVBox" type="VBoxContainer" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 244.0
margin/top = 0.0
margin/right = 320.0
margin/bottom = 436.0
alignment = 0

[node name="Scenes" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 76.0
margin/bottom = 40.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Instances" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 44.0
margin/right = 76.0
margin/bottom = 84.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Textures" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 88.0
margin/right = 76.0
margin/bottom = 128.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Materials" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 132.0
margin/right = 76.0
margin/bottom = 172.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Sprites" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 176.0
margin/right = 76.0
margin/bottom = 216.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Scripts" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 220.0
margin/right = 76.0
margin/bottom = 260.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Sounds" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 264.0
margin/right = 76.0
margin/bottom = 304.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Music" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 308.0
margin/right = 76.0
margin/bottom = 348.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="addons" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 352.0
margin/right = 76.0
margin/bottom = 392.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="Extra1" type="CheckButton" parent="VBoxContainer/OptionsVBox/ScrollContainer/VBoxContainer/HBoxContainer/CheckVBox"]

rect/min_size = Vector2( 0, 40 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 396.0
margin/right = 76.0
margin/bottom = 436.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 427.0
margin/right = 332.0
margin/bottom = 443.0

[node name="CommitVBox" type="VBoxContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 447.0
margin/right = 332.0
margin/bottom = 565.0
alignment = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/CommitVBox"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 332.0
margin/bottom = 22.0
scroll/horizontal = true
scroll/vertical = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CommitVBox/ScrollContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 332.0
margin/bottom = 22.0
alignment = 0

[node name="hideInfoBTN" type="CheckButton" parent="VBoxContainer/CommitVBox/ScrollContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 114.0
margin/bottom = 22.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Name"
flat = false
align = 0

[node name="hideOptionsBTN" type="CheckButton" parent="VBoxContainer/CommitVBox/ScrollContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 118.0
margin/top = 0.0
margin/right = 245.0
margin/bottom = 22.0
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false
align = 0

[node name="selectAll" type="Button" parent="VBoxContainer/CommitVBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 26.0
margin/right = 332.0
margin/bottom = 46.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Select All"
flat = false

[node name="deselect" type="Button" parent="VBoxContainer/CommitVBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 50.0
margin/right = 332.0
margin/bottom = 70.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Deselect All"
flat = false

[node name="resetNames" type="Button" parent="VBoxContainer/CommitVBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 74.0
margin/right = 332.0
margin/bottom = 94.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Reset Names"
flat = false

[node name="createFolders" type="Button" parent="VBoxContainer/CommitVBox"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 98.0
margin/right = 332.0
margin/bottom = 118.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create Folders"
flat = false

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]

rect/min_size = Vector2( 0, 16 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 569.0
margin/right = 332.0
margin/bottom = 585.0


